Fix viewport overflow

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -19,6 +19,15 @@
 
 // CUSTOM STYLES
 
+/* img, // Reset de imagenes, videos y canvas
+svg,
+video,
+canvas {
+  max-width: 100%;
+  height: auto;
+  display: block;
+} */
+
 .hero {
   .hero__image {
     background-image: url("../../assets/banner.jpg");
